; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_access.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @access(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct._reent*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = call i32* @get_vfs_for_path(i8* %11)
  store i32* %12, i32** %7, align 8
  %13 = call %struct._reent* (...) @__getreent()
  store %struct._reent* %13, %struct._reent** %8, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @ENOENT, align 4
  store i32 %17, i32* %9, align 4
  store i32 -1, i32* %3, align 4
  br label %29

18:                                               ; preds = %2
  %19 = load i32*, i32** %7, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i8* @translate_path(i32* %19, i8* %20)
  store i8* %21, i8** %10, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load %struct._reent*, %struct._reent** %8, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @CHECK_AND_CALL(i32 %22, %struct._reent* %23, i32* %24, i32 (i8*, i32)* @access, i8* %25, i32 %26)
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %18, %16
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32* @get_vfs_for_path(i8*) #1

declare dso_local %struct._reent* @__getreent(...) #1

declare dso_local i8* @translate_path(i32*, i8*) #1

declare dso_local i32 @CHECK_AND_CALL(i32, %struct._reent*, i32*, i32 (i8*, i32)*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
